--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script> -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="img/png" href="img/logo.png">
     <title>Bahar Daneshi - Architect Portfolio</title>
 </head>
 
