--- a/index.html
+++ b/index.html
@@ -94,41 +94,62 @@
         <div class="container">
             <h2>Past Work</h2>
             <div class="gallery">
-                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Camera_3.jpg" alt="past work 1"></div>
-                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Original_Camera.jpg" alt="past work 2">
+                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Camera_3.jpg" alt="past work 1"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Original_Camera.jpg" alt="past work 2"
+                        loading="lazy">
                 </div>
-                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Camera_3.jpg" alt="past work 3"></div>
-                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Original_Camera.jpg" alt="past work 4">
+                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Camera_3.jpg" alt="past work 3"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/02 int beheshti Alt 01_Original_Camera.jpg" alt="past work 4"
+                        loading="lazy">
                 </div>
-                <div class="gallery-item"><img src="img/03 int beheshti _Camera_7.jpg" alt="past work 5"></div>
-                <div class="gallery-item"><img src="img/Alt 01 m.room Beheshti_Camera_2_Camera_61.jpg"
-                        alt="past work 6"></div>
+                <div class="gallery-item"><img src="img/03 int beheshti _Camera_7.jpg" alt="past work 5" loading="lazy">
+                </div>
+                <div class="gallery-item"><img src="img/Alt 01 m.room Beheshti_Camera_2_Camera_61.jpg" alt="past work 6"
+                        loading="lazy"></div>
                 <div class="gallery-item"><img src="img/Alt 01 m.room Beheshti_Camera_2_Original_Camera.jpg"
-                        alt="past work 7"></div>
-                <div class="gallery-item"><img src="img/alt 01 _1401-11-25_5 - Photo.jpg" alt="past work 8"></div>
-                <div class="gallery-item"><img src="img/alt 01 _1401-11-25_6 - Photo.jpg" alt="past work 9"></div>
-                <div class="gallery-item"><img src="img/alt 01 _1401-11-25_8 - Photo.jpg" alt="past work 10"></div>
-                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_ 002_7 - Photo.jpg" alt="past work 11">
+                        alt="past work 7" loading="lazy"></div>
+                <div class="gallery-item"><img src="img/alt 01 _1401-11-25_5 - Photo.jpg" alt="past work 8"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/alt 01 _1401-11-25_6 - Photo.jpg" alt="past work 9"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/alt 01 _1401-11-25_8 - Photo.jpg" alt="past work 10"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_ 002_7 - Photo.jpg" alt="past work 11"
+                        loading="lazy">
                 </div>
-                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_ 3 (1).jpg" alt="past work 12"></div>
-                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_ 3 (2).jpg" alt="past work 13"></div>
-                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_6 - Photo.jpg" alt="past work 14"></div>
-                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_7 - Photo.jpg" alt="past work 15"></div>
-                <div class="gallery-item"><img src="img/Lobby Beheshti 01_Original_Camera.jpg" alt="past work 16"></div>
-                <div class="gallery-item"><img src="img/01_1 - Photo_4 - Photo.jpg" alt="past work 17"></div>
-                <div class="gallery-item"><img src="img/01_1 - Photo_5 - Photo.jpg" alt="past work 18"></div>
-                <div class="gallery-item"><img src="img/01_15 - Photo.jpg" alt="past work 19"></div>
-                <div class="gallery-item"><img src="img/01_Camera_3.jpg" alt="past work 20"></div>
-                <div class="gallery-item"><img src="img/05_Camera_4.jpg" alt="past work 21"></div>
-                <div class="gallery-item"><img src="img/Raheli FFHall_Camera_6.jpg" alt="past work 22"></div>
-                <div class="gallery-item"><img src="img/render_Camera_5.png" alt="past work 23"></div>
-                <div class="gallery-item"><img src="img/render_Camera_6.png" alt="past work 24"></div>
+                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_ 3 (1).jpg" alt="past work 12"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_ 3 (2).jpg" alt="past work 13"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_6 - Photo.jpg" alt="past work 14"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Alt 04 beheshti nama_7 - Photo.jpg" alt="past work 15"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Lobby Beheshti 01_Original_Camera.jpg" alt="past work 16"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/01_1 - Photo_4 - Photo.jpg" alt="past work 17" loading="lazy">
+                </div>
+                <div class="gallery-item"><img src="img/01_1 - Photo_5 - Photo.jpg" alt="past work 18" loading="lazy">
+                </div>
+                <div class="gallery-item"><img src="img/01_15 - Photo.jpg" alt="past work 19" loading="lazy"></div>
+                <div class="gallery-item"><img src="img/01_Camera_3.jpg" alt="past work 20" loading="lazy"></div>
+                <div class="gallery-item"><img src="img/05_Camera_4.jpg" alt="past work 21" loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Raheli FFHall_Camera_6.jpg" alt="past work 22" loading="lazy">
+                </div>
+                <div class="gallery-item"><img src="img/render_Camera_5.png" alt="past work 23" loading="lazy"></div>
+                <div class="gallery-item"><img src="img/render_Camera_6.png" alt="past work 24" loading="lazy"></div>
                 <div class="gallery-item"><img src="img/01 Kolahdouz- Interior- Hall&kitchen_Camera_4.jpg"
-                        alt="past work 25"></div>
-                <div class="gallery-item"><img src="img/Kolahdooz Nama_Camera_3.jpg" alt="past work 26"></div>
-                <div class="gallery-item"><img src="img/Kolahdooz Nama_Original_Camera.jpg" alt="past work 27"></div>
-                <div class="gallery-item"><img src="img/Kolahdouz - Bedroom _Camera_6.jpg" alt="past work 28"></div>
-                <div class="gallery-item"><img src="img/Kolahdouz New Hall Design_Camera_10.jpg" alt="past work 29">
+                        alt="past work 25" loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Kolahdooz Nama_Camera_3.jpg" alt="past work 26" loading="lazy">
+                </div>
+                <div class="gallery-item"><img src="img/Kolahdooz Nama_Original_Camera.jpg" alt="past work 27"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Kolahdouz - Bedroom _Camera_6.jpg" alt="past work 28"
+                        loading="lazy"></div>
+                <div class="gallery-item"><img src="img/Kolahdouz New Hall Design_Camera_10.jpg" alt="past work 29"
+                        loading="lazy">
                 </div>
 
             </div>
