--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                                 class="fab fa-whatsapp icons-hover"></i></a>
 
                                 <a class="icon-focus" target="__blank" href="mailto:bahardaneshi@gmail.com"><i
-                                                class="fa-regular fa-envelope fa-shake icons-hover"></i></a>
+                                                class="fa-regular fa-envelope icons-hover"></i></a>
                         </div>
                 </div>
         </section>
