--- a/index.html
+++ b/index.html
@@ -96,13 +96,15 @@
         <section id="contact">
                 <div class="container">
                         <h2>Contact Me</h2>
-                        <p>Email: daneshibahar@gmail.com</p>
-                        <p>Phone: <a class="phone" href="tel:+98 915 501 6755">+98 915 501 6755</a></p>
+                        <p>Email: <a class="contact-me" href="mailto:bahardaneshi@gmail.com">daneshibahar@gmail.com</a>
+                        </p>
+                        <p>Phone: <a class="contact-me" href="tel:+98 915 501 6755">+98 915 501 6755</a></p>
                         <div class="icons">
                                 <a class="icon-focus" target="__blank" href="https://wa.me/qr/3NSOCY5SEANVL1"><i
                                                 class="fab fa-whatsapp icons-hover"></i></a>
 
-                                <a class="icon-focus" target="__blank" href="mailto:bahardaneshi@gmail.com"><i
+                                <a class="icon-focus" target="__blank"
+                                        href="mailto:bahardaneshi@gmail.com?subject=Subject%20Here&body=Message%20Text%20Here"><i
                                                 class="fa-regular fa-envelope icons-hover"></i></a>
                         </div>
                 </div>
