--- a/index.html
+++ b/index.html
@@ -98,18 +98,23 @@
                         <h2>Contact Me</h2>
                         <p>Email: <a class="contact-me" href="mailto:bahardaneshi@gmail.com">daneshibahar@gmail.com</a>
                         </p>
-                        <p>Phone: <a class="contact-me" href="tel:+98 915 501 6755">+98 915 501 6755</a></p>
+                        <p>Phone: <a class="contact-me" href="tel:+968 79334205">+968 79334205</a></p>
                         <div class="icons">
-                                <a class="icon-focus" target="__blank" href="https://wa.me/qr/3NSOCY5SEANVL1"><i
-                                                class="fab fa-whatsapp icons-hover"></i></a>
+                                <a class="icon-focus" target="__blank" href="https://wa.me/message/OIXSV3XHR2OXA1">
+                                        <i class="fab fa-whatsapp icons-hover"></i>
+                                </a>
 
                                 <a class="icon-focus" target="__blank"
-                                        href="mailto:bahardaneshi@gmail.com?subject=Subject%20Here&body=Message%20Text%20Here"><i
-                                                class="fa-regular fa-envelope icons-hover"></i></a>
+                                        href="mailto:bahardaneshi@gmail.com?subject=Subject%20Here&body=Message%20Text%20Here">
+                                        <i class="fa-regular fa-envelope icons-hover"></i>
+                                </a>
+
+                                <a class="icon-focus">
+                                        <i id="map-pin" class="fa-solid fa-location-dot icons-hover"></i>
+                                </a>
                         </div>
                 </div>
         </section>
-
 
         <section id="past-work">
                 <div class="container">
@@ -196,6 +201,7 @@
                 </div>
         </section>
         <!-- <script src="js/Masonry.js"></script> -->
+        <script src="js/location.js"></script>
 </body>
 
 </html>
